--- a/less/app.less
+++ b/less/app.less
@@ -4416,3 +4416,13 @@ button.standard:hover:not([disabled]) {
     }
   }
 }
+
+#hostVulnerabilities {
+  position: absolute;
+  top: -15px;
+  right: 0;
+  width: 1px;
+  height: 1px;
+  min-width: 0;
+  padding: 0;
+}
